--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="nagłówki">
-        <h1 class="tytuł">tytuł książki</h1>
+    <div class="headers">
+        <h1 class="title">tytuł książki</h1>
         <h2>Imie i Nazwisko autora</h2>
     </div>
 </body>
